[tool.poetry]
name = "unicode-font-cov"
version = "0.1.0"
description = ""
authors = ["zydxt <zydxt1991@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fonttools = "^4.53.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.371"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
